# cmake_start

./: .clang-format  .gitignore
add_library/: CMakeLists.txt  add_library.cpp  add_library_config.h.in
add_library/math_functions/: CMakeLists.txt  math_functions.cpp  math_functions.h  mysqrt.cpp  mysqrt.h
basic_project/: CMakeLists.txt  basic_project_config.h.in  main.cpp
create_lib/: CMakeLists.txt
create_lib/include/: math_functions.h
create_lib/src/: math_functions.cpp
indicate_header_directory/: CMakeLists.txt
indicate_header_directory/include/: my_add.h
indicate_header_directory/src/: main.cpp  my_add.cpp
link_dynamic_lib/: CMakeLists.txt
link_static_lib/: CMakeLists.txt  main.cpp
link_static_lib/include/: math_functions.h
macro_definition/: CMakeLists.txt  main.c
nested_cmake/: CMakeLists.txt
nested_cmake/include/: sort.h
nested_cmake/math_functions/: CMakeLists.txt  add.cpp  multiply.cpp
nested_cmake/sort/: CMakeLists.txt  insertion_sort.cpp  selection_sort.cpp
nested_cmake/test_math_functions/: CMakeLists.txt  math_functions.cpp
nested_cmake/test_sort/: CMakeLists.txt  sort.cpp
search_source/: CMakeLists.txt  my_math.hpp  search_source.cpp
string_operation/: CMakeLists.txt
string_operation/include/: math_functions.h
string_operation/src/: divide.cpp  subtract.cpp
